--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ source-code: https://github.com/JacobSmith-UTK691/test1
 # SITE SETTINGS
 #
 # title of site appears in banner
-title: 565 DL Test 
+title: Migration Patterns of Rhea County, Tennessee
 # tagline, a short phrase that will appear throughout the site in the top banner
 tagline: test
 # description appears in meta tags and other locations
